# cluster-api-addon-provider-fleet

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Tiltfile  development.nix  justfile  metadata.yaml  rustfmt.toml  shell.nix
.devcontainer/: devcontainer.json  post-install.sh
.github/: dependabot.yml
.github/workflows/: ci.yaml  documentation.yaml  release.yaml  rust-clippy.yml
config/crds/: fleet-addon-config.yaml  kustomization.yaml
config/default/: kustomization.yaml  manager_image_patch.yaml
config/manager/: manager.yaml
config/rbac/: kustomization.yaml  role.yaml  role_binding.yaml  secret.yaml  service_account.yaml
docs/: README.md  book.toml
docs/book/src/: SUMMARY.md
docs/book/src/developers/: development.md
docs/book/src/topics/: import-strategy.md  index.md  prerequisites.md
docs/src/: 00_intro.md  01_motivation.md
docs/src/02_getting_started/: 00.md  01_installation.md  02_configuration.md
docs/src/03_tutorials/: 00.md  01_prerequisites.md  02_installing_kindnet_cni.md  03_installing_calico.md  04_installing_calico_via_gitrepo.md
docs/src/04_reference/: 00.md  01_import-strategy.md  02_templating-strategy.md
docs/src/05_developers/: 00.md  01_release.md  02_development.md
fleet/applications/calico/: fleet.yaml
src/: controller.rs  crdgen.rs  lib.rs  main.rs  metrics.rs  multi_dispatcher.rs  predicates.rs  telemetry.rs
src/api/: bundle_namespace_mapping.rs  capi_cluster.rs  capi_clusterclass.rs  fleet_addon_config.rs  fleet_bundle_deployment.rs  fleet_cluster.rs  fleet_cluster_registration_token.rs  fleet_clustergroup.rs  mod.rs
src/controllers/: addon_config.rs  cluster.rs  cluster_class.rs  cluster_group.rs  controller.rs  mod.rs
src/controllers/helm/: install.rs  mod.rs
src/fleet/: mod.rs
testdata/: bundle.yaml  capi-quickstart.yaml  class_quickstart.yaml  cluster_docker_kcp.yaml  cluster_docker_rke2.yaml  cluster_quickstart.yaml  cni.yaml  config.yaml  crs.yaml  gitrepo-calico.yaml  helm.yaml  ingress-class.yaml  kind-config.yaml
tests/: README.md  conftest.py  pyproject.toml  pytest.ini
tests/e2e/: test_provider.py
tests/framework/: capi.py  kind.py  kube.py  run.py  timeout.py
tests/style/: test_python.py  test_rust.py
