[package]
name = "cluster-api-addon-provider-fleet"
version = "0.1.0"
edition = "2021"
default-run = "controller"
license = "Apache-2.0"
publish = true

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"


[lib]
name = "controller"
path = "src/lib.rs"

[features]
default = []
agent-initiated = ["default"]
telemetry = ["tonic", "opentelemetry-otlp"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
actix-web = "4.9.0"
futures = "0.3.28"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
k8s-openapi = { version = "0.23", features = ["latest", "schemars"] }
kube = { version = "0.97", features = [
    "runtime",
    "client",
    "derive",
    "unstable-runtime",
    "unstable-client",
] }
schemars = { version = "0.8.21", features = ["chrono"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_with = "3.9"
serde_json = "1.0.121"
serde_yaml = "0.9.25"
prometheus = "0.13.4"
chrono = { version = "0.4.38", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.20.0"
opentelemetry = { version = "0.20.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.26.0", features = [
    "tokio",
], optional = true }
tonic = { version = "0.12.3", optional = true }
thiserror = "2.0.3"
anyhow = "1.0.86"
base64 = "0.22.1"
clap = { version = "4.5.17", features = ["derive"] }
cluster-api-rs = "1.8.5"
fleet-api-rs = "0.11.1"

[dev-dependencies]
assert-json-diff = "2.0.2"
http = "1"
hyper = "1"
tower-test = "0.4.0"
