[package]
name = "cluster-api-addon-provider-fleet"
version = "0.1.0"
edition = "2021"
default-run = "controller"
license = "Apache-2.0"
publish = true

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"


[lib]
name = "controller"
path = "src/lib.rs"

[features]
default = []
agent-initiated = ["default"]
telemetry = ["tonic", "opentelemetry-otlp"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.9", features = ["small_rng"] }
actix-web = "4.10.2"
futures = "0.3.28"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "process"] }
k8s-openapi = { version = "0.24", features = ["latest", "schemars"] }
kube = { version = "0.99.0", features = [
    "runtime",
    "client",
    "derive",
    "unstable-runtime",
    "unstable-client",
] }
schemars = { version = "0.8.22", features = ["chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.12"
serde_json = "1.0.139"
serde_yaml = "0.9.25"
prometheus = "0.13.4"
chrono = { version = "0.4.40", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.28.0"
opentelemetry = { version = "0.27.1", features = ["trace"] }
opentelemetry-otlp = { version = "0.28.0", optional = true }
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
tonic = { version = "0.12.3", optional = true }
thiserror = "2.0.11"
anyhow = "1.0.96"
base64 = "0.22.1"
clap = { version = "4.5.32", features = ["derive"] }
cluster-api-rs = "1.9.6"
fleet-api-rs = "0.12.0-rc.1"
async-broadcast = "0.7.2"
pin-project = "1.1.10"
async-stream = "0.3.6"

[dev-dependencies]
assert-json-diff = "2.0.2"
http = "1"
hyper = "1"
tower-test = "0.4.0"
